# platform

./: .dockerignore  .editorconfig  .gitignore  CLA.md  Cargo.toml  DONOT-COMMIT-internal-notes.md  LICENSE  Makefile  README.md  config.json  env.example  patch  prices.json.example
.cargo/: config.toml
LICENSES/: LicenseRef-Commercial.txt
containerfiles/: Containerfile.api  Containerfile.cli  Containerfile.cli-macos-untrusted  Containerfile.email-service  Containerfile.frontend  Containerfile.gateway  Containerfile.lago  Containerfile.metering
docs/: legal-documents.md
enclave/: init.sh  udhcpc-script.sh
enclave/attestation-service/: Cargo.toml
enclave/attestation-service/src/: main.rs
frontend/: .env.example  index.html  package-lock.json  package.json  update-lockfile.sh  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: AttestationModal.vue  AuthLayout.vue  BrailleLoader.vue  DashboardLayout.vue  InfoIcon.vue  LegalAcceptanceModal.vue  SiteFooter.vue  SiteHeader.vue
frontend/src/composables/: useNavbar.js  useWebAuthn.js
frontend/src/styles/: auth-layout.css  dashboard-layout.css
frontend/src/utils/: dateTime.js  developmentBanner.js  sshKeys.js  sshKeys.test.mjs
frontend/src/views/: AuthLogin.vue  Dashboard.vue  InviteAccept.vue  Login.vue  Onboarding.vue  QrLogin.vue
infra-bootstrap/: Containerfile  README.md  entrypoint.sh  main.tf  run.sh  variables.tf
scripts/: admin  caution-docker.sh  install-cli.sh  test-billing.sh
src/api/: Cargo.toml
src/api/migrations/: 001_initial.sql  002_cloud_credentials.sql  003_credential_restructure.sql  004_metering_tables.sql  004_ssh_key_last_used.sql  005_payment_methods.sql  005_ssh_key_multi_user.sql  006_org_settings.sql  007_timestamp_to_timestamptz.sql  008_qr_login_tokens.sql  009_bundles.sql  010_paddle_billing.sql  010_qr_sign_tokens.sql  011_bundle_name_labels.sql  011_multiple_payment_methods.sql  012_prepaid_credits.sql  013_subscriptions.sql  014_dunning.sql  015_auto_topup.sql  016_credit_codes.sql  017_fix_cost_usd_precision.sql  018_unique_active_subscription.sql  019_billing_indexes.sql  020_eif_builds.sql  021_missing_indexes.sql  022_check_constraints.sql  023_fix_payment_status_constraint.sql  024_eif_builds_user_id.sql  024_legal_documents.sql  025_eif_builds_timeout_status.sql  026_initialized_state.sql  027_billing_org_id.sql  028_legal_document_source_tracking.sql  028_passkey_names.sql  029_eif_builds_app_id_lock.sql  030_tracked_resource_application_id.sql  031_usage_records_pricing_and_application.sql  032_usage_records_drop_derived_costs.sql  033_usage_ledger.sql  034_drop_credit_ledger_balance_after.sql  (+24 more)
src/api/src/: billing.rs  builder.rs  cleanup.rs  cloud_credentials.rs  config.rs  cryptographic_bundles.rs  db.rs  deployment.rs  ec2.rs  eif_download.rs  encryption.rs  errors.rs  fully_managed_capacity.rs  gpg.rs  legal.rs  main.rs  metering.rs  middleware.rs  onboarding.rs  org_quorum.rs  organizations.rs  provisioning.rs  resources.rs  subscriptions.rs  suspension.rs  types.rs  users.rs  validated_types.rs  validation.rs
src/api/tests/data/demo-hello-world-enclave/: Procfile
src/api/tests/data/example/: caution.hcl
src/caution-config/: Cargo.toml
src/caution-config/src/: lib.rs  pricing.rs
src/cli/: Cargo.toml  README.md  build.rs
src/cli/src/: attestation.rs  lib.rs  loader.rs  main.rs
src/cli/src/apps/: download_eif.rs  migrate_procfile.rs  mod.rs
src/email-service/: Cargo.toml
src/email-service/src/: main.rs
src/email-service/templates/: organization_invite.html  organization_invite.txt
src/enclave-builder/: Cargo.toml
src/enclave-builder/src/: build.rs  compile.rs  docker.rs  extract.rs  lib.rs  manifest.rs  merge.rs  pcrs.rs
src/enclave-builder/src/templates/: Containerfile.eif.tmpl  Containerfile.steve.tmpl  run.sh.tmpl
src/enclave-builder/templates/: Containerfile.eif  run.sh.template
src/environment-heuristics/: Cargo.toml
src/environment-heuristics/src/: lib.rs
src/gateway/: Cargo.toml
src/gateway/src/: auth_middleware.rs  config.rs  csrf.rs  db.rs  decoy.rs  handlers.rs  main.rs  pgp.rs  proxy.rs  rate_limit.rs  request_id.rs  security_headers.rs  ssh_server.rs  types.rs  validation.rs
src/hcl-patcher/: Cargo.toml
src/hcl-patcher/src/: error.rs  main.rs  patcher.rs  xpath.rs
src/metering/: Cargo.toml
src/metering/src/: balance.rs  billing.rs  calculator.rs  collection.rs  cost_explorer.rs  credits.rs  dunning.rs  lago.rs  main.rs  paddle.rs  types.rs  webhooks.rs
src/metering/src/providers/: aws.rs  mod.rs
src/observability/: Cargo.toml
src/observability/src/: lib.rs
systemd/: caution-api.service  caution-email.service  caution-frontend.service  caution-gateway.service  caution-metering.service  caution-network.service  caution-postgres.service
terraform-bootstrap/: README.md  backend.tf  main.tf  run.sh  variables.tf
terraform/modules/aws/ec2-app/: main.tf  outputs.tf  variables.tf  versions.tf
tests/: README.md  cross-device-qr.md  test_cli_install.sh  test_no_auto_topup.py  test_provision_paddle.sh
tests/e2e/: destroy-all-apps.sh  mock_org_quorum_services.py  test_authz_roles.sh  test_billing.sh  test_billing_gates.sh  test_byoc.sh  test_concurrent_deploy.sh  test_dedicated_builder.sh  test_env_parity.sh  test_happy_path.sh  test_legal_tracking.sh  test_managed_on_prem.sh  test_org_user_quorum.sh  test_paddle_subscriptions.sh  test_pgp_audit_constraints.sh  test_pgp_units.sh  test_platform_ports.sh  test_qr_login.sh  test_secret_new.sh  test_ssh_units.sh  test_webauthn_browser.sh  test_webauthn_login.sh  test_webauthn_roundtrip.sh
tests/e2e/browser-authenticator/: cdp-passkey.mjs  package-lock.json  package.json
tests/e2e/fixtures/: init-fixtures.sh  prices-paddle-subscriptions.json
tests/e2e/soft-authenticator/: Cargo.toml
tests/e2e/soft-authenticator/src/: main.rs
utils/: add-legal-doc-from-website.sh  admin  backfill-legal-doc-provenance.sh  destroy-child-accounts.sh  generate-beta-codes.sh  generate-credit-codes.sh  install.sh  provision-paddle.sh
(+21 files in other folders)
