# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[workspace]
members = [
    "src/api",
    "src/gateway",
    "src/cli",
    "src/email-service",
    "src/enclave-builder",
]
resolver = "2"

[workspace.dependencies]
# Web frameworks
axum = "0.8"
tower = "0.4"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
hex = "0.4"
regex = "1.10"

# Async utilities
async-trait = "0.1"

# Time
time = { version = "0.3", features = ["serde"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# URL parsing
url = "2"

# Random
rand = "0.8"

# Hashing
sha2 = "0.10"

# Encryption
aes-gcm = "0.10"

# Environment
dotenvy = "0.15"

# Temp files
tempfile = "3.8"

# Directories
dirs = "5"
