# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }

# Onboarding dependencies
reqwest = { version = "0.11", features = ["json"] }
url = { workspace = true }

# Enclave dependencies
sha2 = { workspace = true }
enclave-builder = { path = "../enclave-builder" }

# AWS SDK for S3 uploads
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"

# Cache directory
dirs = { workspace = true }
