# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tempfile = { workspace = true }
regex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }

# Onboarding dependencies
reqwest = { version = "0.11", features = ["json"] }
url = { workspace = true }

# Enclave dependencies
sha2 = { workspace = true }
enclave-builder = { path = "../enclave-builder" }

# Encryption for credentials
aes-gcm = { workspace = true }
rand = { workspace = true }

# AWS SDK for S3 uploads and managed on-prem deployments
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
aws-sdk-autoscaling = "1.15"

aws-sdk-ec2 = "1.15"

# Cache directory
dirs = { workspace = true }

# GPG decryption for managed on-prem
sequoia-openpgp = { version = "1.21", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto", "compression-deflate"] }
