# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
# From workspace
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }

# Internal dependencies
enclave-builder = { path = "../enclave-builder" }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "env"] }
serde_cbor = "0.11"
authenticator = { version = "0.4", features = ["crypto_openssl"], default-features = false }
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
url = "2.5"  # URL parsing for git remote detection

# Attestation verification
coset = "0.3"  # COSE (CBOR Object Signing and Encryption)
x509-parser = "0.16"  # X.509 certificate parsing
ring = "0.17"  # Cryptographic operations
webpki = "0.22"  # Certificate chain verification
pem = "3.0"  # PEM encoding/decoding

flate2 = "1.0"
tar = "0.4"
tempfile = { workspace = true }
chrono = "0.4"
rpassword = "7.3"
