# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "caution"
path = "src/bin/caution.rs"

[dependencies]
# Workspace dependencies
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
base64 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
url = { workspace = true }

# Internal dependencies
enclave-builder = { path = "../enclave-builder" }

# CLI-specific dependencies
clap = { version = "4.5", features = ["derive", "env"] }
serde_cbor = "0.11"
authenticator = { version = "0.4", features = ["crypto_openssl"], default-features = false }
qrcode = "0.14"
rpassword = "7.3"
zeroize = "1"

# Attestation verification
bootproof-sdk = { git = "https://git.distrust.co/public/bootproof.git" }
coset = "0.3"

# Locksmith (shard sending)
locksmith = { git = "https://codeberg.org/caution/locksmith.git" }
keymaker-models = { git = "https://codeberg.org/caution/locksmith.git" }

# Archive handling
flate2 = "1.0"
tar = "0.4"
caution-environment-heuristics = { version = "0.1.0", path = "../environment-heuristics" }

[build-dependencies]
caution-environment-heuristics = { version = "0.1.0", path = "../environment-heuristics" }
serde_json.workspace = true
