# SPDX-FileCopyrightText: 2025 Caution SEZC
# SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Commercial

[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
# From workspace
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "limit", "fs"] }
sqlx = { workspace = true, features = ["macros", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
anyhow = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
sha2 = { workspace = true }
hmac = { workspace = true }
subtle = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
async-trait = { workspace = true }
tempfile = { workspace = true }
sequoia-openpgp = { workspace = true }

# Gateway-specific dependencies
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui", "danger-credential-internals"] }
webauthn-rs-proto = "0.5"
russh = "0.61"
ssh-key = { version = "0.6.7", features = ["crypto"] }
thiserror = { workspace = true }
dterror = "0.1.0"
bytes = "1"
rand010 = { package = "rand", version = "0.10", features = ["thread_rng"] }
futures = "0.3"
cookie = "0.18"
axum-extra = { version = "0.10", features = ["cookie"] }

[features]
e2e-testing-unsafe = []
